# monotonic-alignment_torch-cpp

./: LICENSE  README.md  pyproject.toml  setup.py
cpp_extensions/: monotonic_align.cpp
monotonic_align/: __init__.py
