[build-system]
requires = [
    "setuptools",
    "torch",
]
build-backend = "setuptools.build_meta"

[project]
name = "monotonic_align"
authors = [
    {name = "Takuya Hasumi"},
]
description = "Implementation of monotonic alignment by cpp extension of PyTorch."
readme = "README.md"
license = {file = "LICENSE"}
urls = {url = "https://github.com/tky823/monotonic-alignment_torch-cpp"}
requires-python = ">=3.7, <3.11"
dependencies = [
    "torch",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort"
]

[tool.setuptools.dynamic]
version = {attr = "monotonic_align.__version__"}

[tool.setuptools.packages.find]
include = [
    "monotonic_align",
]

[tool.black]
line-length = 99

[tools.flake8]
max-line-length = 99

[tool.isort]
profile = "black"
line_length = 99
